--- a/static/labs/lab-01-ikea.Rmd
+++ b/static/labs/lab-01-ikea.Rmd
@@ -3,7 +3,7 @@ title: "Lab 01: Getting Started with R!"
 subtitle: "due Sun, Jan 31 at 11:59p"
 output: 
   tufte::tufte_html:
-    css: "./sta210-labs.css"
+    css: "sta210-labs.css"
     tufte_variant: "envisioned"
     highlight: pygments
     fig_height: 4
@@ -27,7 +27,7 @@ R is the name of the programming language itself and RStudio is a convenient use
 ```
 
 
-The goal of this lab is to get you started with the computing workflow we'll use throughout the semester.  You'll get started using writing reproducible reports using R Markdown and practicing version control using git and GitHub.
+The goal of this lab is to get you started with the computing workflow we'll use throughout the semester.  You'll get started using writing reproducible reports using RStudio and R Markdown and practicing version control using git and GitHub.
 
 ```{marginfigure}
 git is a version control system (like "Track Changes" features from Microsoft Word but more powerful) and GitHub is the home for your Git-based projects on the internet (like DropBox but better).
@@ -35,15 +35,17 @@ git is a version control system (like "Track Changes" features from Microsoft Wo
 
 As the labs progress, you are encouraged to explore beyond what the labs dictate; a willingness to experiment will make you a much better programmer and statistician. This lab is a brief review of the fundamental building blocks of R and RStudio: the interface, reading in data, and basic data wrangling and graphing functions. If you're new to R or would like additional practice, there are additional resources listed at the end of the lab instructions. 
 
-Today's lab will be individual, to give you a chance to become more familiar with the workflow. In future labs you will work in teams, and learn how to collaborate using GitHub to produce a single lab report as a team. 
+Today's lab will be individual to give you a chance to become more familiar with the workflow. In future labs you will work in teams and learn how to collaborate using GitHub to produce a single lab report as a team. 
 
 ## Learning goals 
 
+By the end of the lab, you will...
+
 - Be familiar with the workflow using RStudio and GitHub
-- Be able to write a reproducible report using RMarkdown
+- Gain practice writing a reproducible report using RMarkdown
 - Practice version control using GitHub
-- Create data visualizations using ggplot2
-- Describe the a distribution and the relationship between multiple variables 
+- Be able to create data visualizations using ggplot2
+- Be able to describe variable distributions and the relationship between multiple variables 
 
 # Getting Started
 
@@ -208,7 +210,7 @@ The variable definitions are as follows:
 
 ## View the data 
 
-Before doing any analysis, you may want to get quick view of the data. This is a useful when you've imported data to see if your data imported correctly. We can use the `View` function to see the entire data set in RStudio. Type the code below in the **console** to view the entire dataset. 
+Before doing any analysis, you may want to get quick view of the data. This is useful when you've imported data to see if your data imported correctly. We can use the `View` function to see the entire data set in RStudio. Type the code below in the **console** to view the entire dataset. 
 
 ```{marginfigure}
 Notice that the `View(ikea)` command was run in the console and **not** in a code chunk in the RMarkdown file. By running the `View(ikea)` in the console, the dataset displays in your RStudio environment but not in the PDF output from your knitted Rmd file. 
@@ -222,11 +224,11 @@ View(ikea)
 
 ## Instructions 
 
-Write all code and narrative in your R Markdown file. Write all narrative in complete sentences. Periodically throughout the assignment, you should **knit** your R Markdown document to produce the updated PDF, **commit** the changes in the Git pane, and **push** the updated files to GitHub. 
+Write all code and narrative in your R Markdown file. Write all narrative in complete sentences. Throughout the assignment, you should periodically **knit** your R Markdown document to produce the updated PDF, **commit** the changes in the Git pane, and **push** the updated files to GitHub. 
 
-**Tip** Make sure we can read all or your code in your PDF document. This means you will need to break up long lines of code. One way to help avoid long lines of code is is start a new line after every pipe (`%>%`) and plus sign (`+`). 
+**Tip**: Make sure we can read all or your code in your PDF document. This means you will need to break up long lines of code. One way to help avoid long lines of code is is start a new line after every pipe (`%>%`) and plus sign (`+`). 
 
-1. The `View` function helped us get a quick view of the dataset, but let's get more detail about its structure. Often viewing a summary of the data is more useful than viewing the raw data, especially if the dataset has a large number of observations (rows) or variables (columns). Run the code below to use the `glimpse` function to see a summary of the `ikea` dataset.
+1. The `View` function helped us get a quick view of the dataset, but let's get more detail about its structure. Viewing a summary of the data is a useful starting point for data analysis, especially if the dataset has a large number of observations (rows) or variables (columns). Run the code below to use the `glimpse` function to see a summary of the `ikea` dataset.
 
   How many observations are in the `ikea` dataset? How many variables?
 
@@ -235,7 +237,7 @@ Write all code and narrative in your R Markdown file. Write all narrative in com
 glimpse(ikea)
 ```
 
-2. We begin each regression analysis with with exploratory data analysis (EDA) to help us "get to know" the data and examine the variable distributions and relationships between variables. We do this by visualizing the data and calculating summary statistics to describe the variables in our dataset. In this lab, we will focus on data visualizations. 
+2. We begin each regression analysis with exploratory data analysis (EDA) to help us "get to know" the data and examine the variable distributions and relationships between variables. We do this by visualizing the data and calculating summary statistics to describe the variables in our dataset. In this lab, we will focus on data visualizations. 
 
 
   Let's begin by looking at the price of Ikea furniture. Use the code below to visualize the distribution of `price_usd`, the price in US dollars. 
@@ -247,7 +249,7 @@ ggplot(data = ikea, aes(x = price_usd)) +
 
 Use the visualization to describe the distribution of price. In your narrative, include description of the shape, approximate center, approximate spread, and any presence of outliers. 
 
-3. When we make visualizations, we want to make sure they are clear and suitable for a professional audience. This means that, at a minimum, each visualization should have **an informative title** and **informative axis labels**. Let's modify the plot from the previous question to make it suitable for a professional audience. Modify the code below to include an informative title and axis labels. 
+3. When we make visualizations, we want them to be clear and suitable for a professional audience. This means that, at a minimum, each visualization should have **an informative title** and **informative axis labels**. Let's modify the plot from the previous question to make it suitable for a professional audience. Modify the code below to include an informative title and informative axis labels. 
 
 ```{r eval = F}
 ggplot(data = ikea, aes(x = price_usd)) +
@@ -257,21 +259,20 @@ ggplot(data = ikea, aes(x = price_usd)) +
        title = "_____")
 ```
 
+```{marginfigure}
+See the [ggplot2 reference on density plots](https://ggplot2.tidyverse.org/reference/geom_density.html) for code examples.
+```
 
 4. Another way to visualize numeric data is using density plots. Make a density plot to visualize the distribution of `price_usd`. Be sure to include an informative title and informative axis labels. 
 
 
 ```{marginfigure}
-See the [ggplot2 reference on density plots](https://ggplot2.tidyverse.org/reference/geom_density.html) for code examples.
+Check your lab-01 repo on the GitHub website (you may need to refresh the page in your browser) to ensure that all of the files are up-to-date.
 ```
 
 <div class = "commit">
-This is a good place to knit, commit, and push changes to your remote lab-01 repo on GitHub. Be sure to write an informative commit message (e.g. "Completed exercises 1 - 4"), and push every file to GitHub by clicking the checkbox next to each file in the Git pane. After you push the changes, the Git pane in RStudio should be empty."
+This is a good place to knit, commit, and push changes to your remote lab-01 repo on GitHub. Write an informative commit message (e.g. "Completed exercises 1 - 4"), and push every file to GitHub by clicking the checkbox next to each file in the Git pane. After you push the changes, the Git pane in RStudio should be empty."
 </div>
-
-```{marginfigure}
-Check your lab-01 repo on the GitHub website (you may need to refresh the page in your browser) to ensure that all of the files are up-to-date.
-```
 
 
   We are most interested in the relationship between two or more variables, so let's begin by looking at the distribution of price by category. We'll focus on the five categories in the code below, since these include commonly purchased types of furniture. 
@@ -287,36 +288,38 @@ ikea_sub <- ikea %>%
                          "Sofas & armchairs", "Children's furniture"))
 ```
 
-5. Let's make a density plot with the density curves colored by category, so we can compare the distribution of price for each category. 
+5. Let's make a new visualization with the density curves colored by category, so we can compare the distribution of price for each category. 
 
 ```{r}
 ggplot(data = ikea_sub, aes(x = price_usd, fill = category)) +
   geom_density() 
 ```
 
-  The overlapping colors make it difficult to tell what’s happening with the distributions for the categories plotted first and hence covered by continents plotted over them. We can change the transparency level of the fill color to help with this. The alpha argument takes values between 0 and 1: 0 is completely transparent and 1 is completely opaque. There is no way to tell what value will work best, so it’s best to try a few.
+  The overlapping colors make it difficult to tell what’s happening with the distributions for the categories plotted first and hence covered by categories plotted over them. We can change the transparency level of the fill color to help with this. The alpha argument takes values between 0 and 1: 0 is completely transparent and 1 is completely opaque. There is no way to tell what value will work best, so it’s best to try a few.
 
 ```{r}
 ggplot(data = ikea_sub, aes(x = price_usd, fill = category)) +
   geom_density(alpha = 0.8) 
 ```
 
-Recreate the density plot using a more suitable alpha level, so we can more easily see the distribution of all the categories. Include an informative title and axis labels.
+Recreate the density plot using a more suitable alpha level, so we can more easily see the distribution of all the categories. Include an informative title and informative axis labels.
 
-6. Briefly describe why we defined the fill of the curves by mapping aesthetics of the plot but we defined the alpha level as a characteristic of the plotting geom.
+6. Briefly describe why we defined the fill of the curves by mapping aesthetics of the plot (inside the `aes` function) but we defined the alpha level as a characteristic of the plotting geom.
 
-7. Overlapping density plots are not the only way to visualize the relationship between a quantitative and categorical variable. Use a different type of plot to visualize the relationship between price and category. 
+7. Overlapping density plots are not the only way to visualize the relationship between a quantitative and categorical variable. Use a different type of plot to visualize the relationship between `price_usd` and `category`. 
 
 You can use the [ggplot2 cheatsheet](https://rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf) and [from Data to Viz](https://www.data-to-viz.com/#ridgeline) for inspiration. 
 
-8. Compare and contrast your plots from the previous exercise and the overlapping density plots. What features are apparent in the plot from the previous exercise that aren't in the overlapping density plots. What features are apparent in the overlapping density plots that aren't in the plot from the previous exercise? What features are apparent in both? 
+8. Compare and contrast your plots from the previous exercise to the overlapping density plots from Exercise 5. What features are apparent in the plot from the previous exercise that aren't in the overlapping density plots? What features are apparent in the overlapping density plots that aren't in the plot from the previous exercise? What features are apparent in both? 
 
 <div class = "commit">
-This is another good place to knit, commit, and push changes to your remote lab-01 repo on GitHub. Be sure to write an informative commit message (e.g. "Completed exercises 5 - 8"), and push every file to GitHub by clicking the checkbox next to each file in the Git pane. After you push the changes, the Git pane in RStudio should be empty."
+This is another good place to knit, commit, and push changes to your remote lab-01 repo on GitHub. Write an informative commit message (e.g. "Completed exercises 5 - 8"), and push every file to GitHub by clicking the checkbox next to each file in the Git pane. After you push the changes, the Git pane in RStudio should be empty."
 </div>
 
 
 9. Next, let's look at the relationship between the price and width of Ikea furniture. Fill in the code below  to visualize the relationship between the two variables using a scatterplot.
+
+Use your visualization to describe the relationship between the width and price of Ikea furniture. 
 
 ```{r eval = F}
 ggplot(data = _____, aes(x = width, y = _____)) +
@@ -326,7 +329,6 @@ ggplot(data = _____, aes(x = width, y = _____)) +
        title = "_____")
 ````
 
-Use your visualization to describe the relationship between the width and price of Ikea furniture. 
 
 10. Color the points of the scatterplot by category. Does there seem to be any clear distinctions between categories with respect to the relationship between the price and width of Ikea furniture? Briefly explain.
 
@@ -334,18 +336,16 @@ Use your visualization to describe the relationship between the width and price 
 <div class = "commit">
 You're done and ready to submit your work! Knit, commit, and push all remaining changes. You can use the commit message "Done with Lab 1!", and make sure you have pushed all the files to GitHub (your Git pane in RStudio should be empty) and that<u>all</u> documents are updated in your repo on GitHub. The PDF document you submit to Gradescope should be identical to the one in your GitHub repo. 
 
-See the instructions to submit your work on Gradescope.
+See the instructions below to submit your work on Gradescope.
 </div>
 
 # Submission
 
-In this class, we'll be submitting .pdf documents to Gradescope. Once you are fully satisfied with your lab, **Knit to .pdf** to create a .pdf document. You may notice that the formatting/theme of the report has changed -- this is expected.
+In this class, we'll be submitting PDF documents to Gradescope.
 
-**Before you wrap up the assignment, make sure all documents are updated on your GitHub repo. we will be checking these to make sure you have been practicing how to commit and push changes.**
+**Before you wrap up the assignment, make sure all documents are updated on your GitHub repo. We will be checking these to make sure you have been practicing how to commit and push changes.**
 
-**Remember -- you must turn in a .pdf file to the Gradescope page before the submission deadline for full credit.** 
-
-Once your work is finalized in your GitHub repo, you will submit it to Gradescope. **Your assignment must be submitted on Gradescope by the deadline to be considered "on time".**
+**Remember -- you must turn in a PDF file to the Gradescope page before the submission deadline for full credit.** 
 
 To submit your assignment: 
 
@@ -357,9 +357,9 @@ To submit your assignment:
 
 - Click on the assignment, and you'll be prompted to submit it.
 
-- Mark the pages associated with each exercise. All of the papers of your lab should be associated with at least one question (i.e., should be "checked"). 
+- Mark the pages associated with each exercise. All of the pages of your lab should be associated with at least one question (i.e., should be "checked"). 
 
-- Select the first page of your .pdf submission to be associated with the *"Overall"* section.
+- Select the first page of your .PDF submission to be associated with the *"Overall"* section.
 
 # Resources for additional practice (optional)
 
