--- a/public/appex/ae-02-multivar-relationships.Rmd
+++ b/public/appex/ae-02-multivar-relationships.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "AE 02: Multivariable relationships"
+title: "Welcome to STA 210!"
 date: "`r Sys.Date()`"
 output: 
   html_document: 
@@ -17,19 +17,7 @@ knitr::opts_chunk$set(warning = FALSE,
 ## Class announcements
 
 - Office hours start Monday
-- Labs start Monday 
-
-## Check in 
-
-## Introductions
-
-## Meet your classmates! (~ 7 minutes)
-
-- Go to a breakout room
-- Introduce yourself!
-  - Name
-  - Year
-  - What is something you're looking forward to this semester (either in this class or in general)?
+- Labs start on Monday
 
 ## Check in 
 
@@ -82,8 +70,5 @@ You can access RStudio by going to  https://vm-manage.oit.duke.edu/containers an
 - RStudio environment
 - Brief intro to R Markdown
 - R Markdown vs. the console
-
-
-
 
 
