--- a/static/appex/ae-01-welcome.Rmd
+++ b/static/appex/ae-01-welcome.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Welcome to STA 210!"
+title: "AE 02: Multivariable relationships"
 date: "`r Sys.Date()`"
 output: 
   html_document: 
@@ -17,7 +17,19 @@ knitr::opts_chunk$set(warning = FALSE,
 ## Class announcements
 
 - Office hours start Monday
-- Labs start on Monday
+- Labs start Monday 
+
+## Check in 
+
+## Introductions
+
+## Meet your classmates! (~ 7 minutes)
+
+- Go to a breakout room
+- Introduce yourself!
+  - Name
+  - Year
+  - What is something you're looking forward to this semester (either in this class or in general)?
 
 ## Check in 
 
@@ -70,5 +82,8 @@ You can access RStudio by going to  https://vm-manage.oit.duke.edu/containers an
 - RStudio environment
 - Brief intro to R Markdown
 - R Markdown vs. the console
+
+
+
 
 
