--- a/public/appex/ae-02-bikeshare.Rmd
+++ b/public/appex/ae-02-bikeshare.Rmd
@@ -23,6 +23,16 @@ knitr::opts_chunk$set(warning = FALSE,
   - Complete [All About You survey](https://duke.qualtrics.com/jfe/form/SV_czLvjD7M9XkcZKK) by Sun, Jan 31 at 11:59p
 - Check Sakai announcements + email for weekly updates
 
+## Introductions 
+
+## Meet your classmates! (~ 5 minutes)
+
+- Go to a breakout room
+- Introduce yourself!
+  - Name
+  - Year
+  - What is something you're looking forward to this semester (either in this class or in general)?
+
 ## Questions about the class
 
 ## Questions from Lab 01
